--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,14 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
+# Exclude this annoying macOS file
 .DS_Store
-.AppleDouble
-.LSOverride
 
-# Thumbnails
-._*
+# Exclude zones directories
+.idea/**
+/venv/**
+**/__pycache__/**
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Exclude some file types
+*.sublime-project
+*.sublime-workspace
+*.zip
+*.log
+config.ymlx
